<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="id.zulns.androidwifiremote.EditUsersActivity" >

    <View
        style="@style/Divider"
        android:id="@+id/dividerTop"
        android:layout_alignParentTop="true" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usersListView"
        android:layout_above="@+id/dividerBottom"
        android:stackFromBottom="true" />

    <View
        style="@style/Divider"
        android:id="@+id/dividerBottom"
        android:layout_above="@+id/usernameEditText"
        android:layout_marginBottom="8dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/usernameEditText"
        android:hint="@string/username_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/passwordEditText"
        android:layout_toLeftOf="@+id/addUserButton"
        android:layout_toStartOf="@+id/addUserButton"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="4dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_add_user"
        android:id="@+id/addUserButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClickAddUserButton"
        android:layout_alignBaseline="@+id/usernameEditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordEditText"
        android:hint="@string/password_hint"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/showPasswordCheck"
        android:layout_alignRight="@+id/usernameEditText"
        android:layout_alignEnd="@+id/usernameEditText" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_show_password"
        android:id="@+id/showPasswordCheck"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="onClickShowPasswordCheck" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_back"
        android:id="@+id/saveButton"
        android:onClick="onClickSaveButton"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="12dp"
        android:layout_marginEnd="12dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
